--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Youtuber from "../components/youtuber.astro";
 import Shop from "../components/shop.astro";
 import Contact from "../components/contact.astro";
 import Footer from "../components/footer.astro";
-import GamingZoneModal from "../components/gamingzonemodal.astro";
+import GamingZoneModal from "../components/GamingZoneModal.astro"
 ---
 
 <html lang="es">
